design fini pour le 2

--- a/TD1/factsage-2.html
+++ b/TD1/factsage-2.html
@@ -41,6 +41,19 @@
       }
       #buttonStyled {
         margin-bottom: 2vh;
+        background-color: rgb(216, 126, 126);
+        border-radius: 5px;
+        border: none;
+        padding: 1em;
+        color: white;
+        -webkit-transition-duration: 0.4s; /* for safari browser */
+        transition-duration: 0.4s;
+      }
+
+      /* change background color quand on hover*/
+      #buttonStyled:hover {
+        color: black;
+        background: #f7eecf;
       }
     </style>
     <title>TD1, données initiales</title>
