Modification 1ere partie du TD2

--- a/TD2/factsage.html
+++ b/TD2/factsage.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="row1">
         <p>
-          "Chemical equilibria of an ideal gas with pure solids and liquids"
+          Chemical equilibria of an ideal gas with pure solids and liquids
         </p>
       </div>
 
@@ -24,12 +24,14 @@
           </select>
         </div>
         <div>
-          <label>Mass: </label>
-          <select
-            ><option>12</option>
-            <option>1</option>
-            <option>16</option>
-          </select>
+          <div>
+            <label>Mass: </label>
+            <select
+              ><option>12</option>
+              <option>1</option>
+              <option>16</option>
+            </select>
+          </div>
         </div>
         <div>
           <label>P:</label>
@@ -60,38 +62,39 @@
 
       <div class="row4">
         <div>
-
-          <div>
-            <span> Output </span>
-          </div>
+          <span> Output </span>
           <div>
             <span> Concentration cut-off </span>
-            
           </div>
           <div>
-            <select> <option value="">1e-70</option> </select>
+            <select>
+              <option value="">1e-70</option>
+            </select>
           </div>
 
           <div>
-            <span>  </span>
+            <span> </span>
           </div>
           <div>
             <span> format </span>
           </div>
           <div>
-            <select> <option value="">Extended</option> </select>
+            <select>
+              <option value="">Extended</option>
+            </select>
           </div>
 
           <div>
-            <span>  </span>
+            <span> </span>
           </div>
           <div>
             <span> Distribution </span>
           </div>
           <div>
-            <select> <option value="">no</option> </select>
+            <select>
+              <option value="">no</option>
+            </select>
           </div>
-
         </div>
 
         <div>
