TD2-1 Almost done

--- a/TD2/factsage.html
+++ b/TD2/factsage.html
@@ -7,96 +7,117 @@
   <body>
     <div class="container">
       <div class="row1">
-        <p>
-          Chemical equilibria of an ideal gas with pure solids and liquids
-        </p>
+        Chemical equilibria of an ideal gas with pure solids and liquids
       </div>
 
       <div class="row2">
-        <div class="column1">
-          <label>T:</label>
-          <input value="1000" />
-          <label>Units: </label>
-          <select
-            ><option>12</option>
-            <option>1</option>
-            <option>16</option>
-          </select>
+
+        <div> 
+            <form>
+                T:
+                  <input type="text" value="1000" name="T">
+                Units:
+                <select name="Units">
+                  <option value="k">K</option>
+                  <option value="g">G</option>
+                  <option value="cg">Cg</option>
+                  <option value="mg">Mg</option>
+                </select>
+            </form>
         </div>
-        <div>
-          <div>
-            <label>Mass: </label>
-            <select
-              ><option>12</option>
-              <option>1</option>
-              <option>16</option>
-            </select>
-          </div>
+            
+        <div> 
+            <form>
+                mass:
+                <select name="Mass">
+                  <option value="G">gram</option>
+                  <option value="Hg">hgram</option>
+                  <option value="Kg">kgram</option>
+                </select>
+            </form>
         </div>
-        <div>
-          <label>P:</label>
-          <input value="1" />
-          <label>Units: </label>
-          <select
-            ><option>12</option>
-            <option>1</option>
-            <option>16</option>
-          </select>
+
+        <div> 
+            <form>
+                P: 
+                  <input type="text" value="1" name="P">
+                Units:
+                <select name="Units">
+                  <option value="ATM">atm</option>
+                  <option value="BTM">btm</option>
+                  <option value="CTM">ctm</option>
+                  <option value="DTM">dtm</option>
+                </select>
+            </form>
         </div>
+
       </div>
 
       <div class="row3">
-        <div>
-          <label>Mass:</label>
-          <input />
-          <label>Mass:</label>
-          <input />
-        </div>
-        <div>
-          <label>Species:</label>
-          <input value="Si" /> <span>+</span>
-          <label>Species:</label>
-          <input value="Si" /><button>+</button>
-        </div>
+          <div> 
+              <form>
+                  Mass 
+                  <br>
+                    <input type="text" name="M">
+                  </br>
+                  Mass 
+                  <br>
+                    <input type="text" name="M">
+                  </br>
+              </form>
+          </div>
+
+          <div> 
+              <form>
+                  Species 
+                  <br>
+                    <input type="text" value="si" name="S"> +
+                  </br>
+                  Species 
+                  <br>
+                    <input type="text" value="si" name="S">
+                    <button>+</button>
+                  </br>
+              </form>
+          </div>
       </div>
 
       <div class="row4">
         <div>
-          <span> Output </span>
           <div>
-            <span> Concentration cut-off </span>
-          </div>
-          <div>
-            <select>
-              <option value="">1e-70</option>
-            </select>
+            Output
           </div>
 
-          <div>
-            <span> </span>
-          </div>
-          <div>
-            <span> format </span>
-          </div>
-          <div>
-            <select>
-              <option value="">Extended</option>
-            </select>
+          <div class="row4-col">
+              <div>
+                  Concentration cut-off
+              </div>
+              <div>
+                  Format
+              </div>
+              <div>
+                  Distribution
+              </div>
           </div>
 
-          <div>
-            <span> </span>
-          </div>
-          <div>
-            <span> Distribution </span>
-          </div>
-          <div>
-            <select>
-              <option value="">no</option>
-            </select>
+          <div class="row4-col">
+              <div>
+                  <select name="">
+                      <option value="">1e-70</option>
+                  </select>
+              </div>
+              <div>
+                  <select name="">
+                      <option value="">Extended</option>
+                  </select>
+              </div>
+              <div>
+                  <select name="">
+                      <option value="">no</option>
+                  </select>
+              </div>
           </div>
         </div>
-
         <div>
           <button>Clear</button>
           <button>Default</button>
