--- a/TD2/factsage.html
+++ b/TD2/factsage.html
@@ -14,8 +14,9 @@
 
         <div> 
             <form>
+                <input type="hidden" name="PROGRAM" value="EQUILIB" />
                 T:
-                  <input type="text" value="1000" name="T">
+                  <input type="text" value="1000" name="TMIN">
                 Units:
                 <select name="Units">
                   <option value="k">K</option>
@@ -99,32 +100,31 @@
                   Distribution
               </div>
           </div>
-        </div>
 
           <div class="row4-col">
-              <div>
-                  <select name="">
-                      <option value="">1e-70</option>
-                  </select>
-              </div>
-              <div>
-                  <select name="">
-                      <option value="">Extended</option>
-                  </select>
-              </div>
-              <div>
-                  <select name="">
-                      <option value="">no</option>
-                  </select>
-              </div>
+                <div>
+                    <select name="">
+                        <option value="">1e-70</option>
+                    </select>
+                </div>
+                <div>
+                    <select name="">
+                        <option value="">Extended</option>
+                    </select>
+                </div>
+                <div>
+                    <select name="">
+                        <option value="">no</option>
+                    </select>
+                </div>
+            </div>
           </div>
+          <div>
+                <button>Clear</button>
+                <button>Default</button>
+                <button>Calculate >></button>
+              </div>
         </div>
-        <div>
-          <button>Clear</button>
-          <button>Default</button>
-          <button>Calculate >></button>
-        </div>
-      </form>
     </div>
   </body>
 </html>
