--- a/TD2/factsage.html
+++ b/TD2/factsage.html
@@ -19,7 +19,7 @@
                   <input type="text" value="1000" name="TMIN">
                 Units:
                 <select name="Units">
-                  <option value="k">K</option>
+                  <option value="K">K</option>
                   <option value="g">G</option>
                   <option value="cg">Cg</option>
                   <option value="mg">Mg</option>
