--- a/TD3/index.html
+++ b/TD3/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div><h1>Poly Chat</h1></div>
+      <div><img src="imgs/polychat-icon.gif" alt="polychat icon" /></div>
       <div id="navigation-icons">
         <button>
           <img src="imgs/baseline-settings-20px.svg" alt="settings" />
@@ -48,43 +48,41 @@
       </div>
       <div id="chat-zone">zone messagerie</div>
       <div id="group-zone">
-        <div id="group-zone-info">
-          <div class="group-info">
-            <div>
-              <button>
-                <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
-              </button>
-            </div>
-            <h4>General</h4>
-            <button class="default-button">default</button>
+        <h3>salles actives</h3>
+        <div class="group-info">
+          <div>
+            <button>
+              <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
+            </button>
           </div>
-          <div class="group-info">
-            <div>
-              <button>
-                <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
-              </button>
-            </div>
-            <h4>Equipe 1</h4>
-            <button class="default-button">default</button>
+          <h4>General</h4>
+          <button class="default-button">default</button>
+        </div>
+        <div class="group-info">
+          <div>
+            <button>
+              <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
+            </button>
           </div>
-          <div class="group-info" active>
-            <div>
-              <button>
-                <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
-              </button>
-            </div>
-            <h4>Equipe 2</h4>
-            <button class="default-button">default</button>
+          <h4>Equipe 1</h4>
+        </div>
+        <h3>salles disponibles</h3>
+        <div class="group-info" active>
+          <div>
+            <button>
+              <img src="imgs/baseline-add-24px.svg" alt="settings" />
+            </button>
           </div>
+          <h4>Equipe 2</h4>
         </div>
       </div>
       <div id="text-zone">
         <button>
-          <img src="imgs/baseline_thumb_up_white_18dp.png" alt="settings" />\
+          <img src="imgs/baseline_thumb_up_white_18dp.png" alt="settings" />
         </button>
-        <div>ok voici ou doit aller le text</div>
+        <div><p>Type a message...</p></div>
         <button>
-          Envoyer
+          <h3>Envoyer</h3>
         </button>
       </div>
     </section>
