--- a/TD3/index.html
+++ b/TD3/index.html
@@ -3,8 +3,13 @@
   <head>
     <title>WebSocket Chat Demo</title>
     <meta charset="utf-8" />
-    <link href="index.css" rel="stylesheet" />
-    <script type="text/javascript" src="chatclient.js"></script>
+    <link href="css/main.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/message.js"></script>
+    <script type="text/javascript" src="js/channel.js"></script>
+    <script type="text/javascript" src="js/messagesObserver.js"></script>
+    <script type="text/javascript" src="js/channelsObserver.js"></script>
+    <script type="text/javascript" src="js/connectionHandler.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <header>
@@ -30,7 +35,7 @@
     <section>
       <div id="chat-title">
         <h4>Groupe actif:</h4>
-        <h3>Général</h3>
+        <h3>Equipe 1</h3>
       </div>
       <div id="group-title">
         <h4>Liste des groupes</h4>
@@ -38,42 +43,85 @@
           <h3>Groupes disponibles</h3>
           <div>
             <button>
-              <img src="imgs/baseline-settings-white-20px.gif" alt="settings" />
+              <img src="imgs/baseline-settings-white-20px.svg" alt="settings" />
             </button>
             <button>
-              <img src="imgs/baseline-add-white-24px.gif" alt="settings" />
+              <img src="imgs/baseline-add-white-24px.svg" alt="settings" />
             </button>
           </div>
         </div>
       </div>
-      <div id="chat-zone">zone messagerie</div>
+      <div id="chat-zone">
+        <div class="message">
+          <h6 class="sender">robot</h6>
+          <p>alors voici ce que je voulais te dire depuis la</p>
+          <h6 class="date">il y a 3 min</h6>
+        </div>
+        <div class="message">
+          <h6 class="sender">robot</h6>
+          <p>
+            je ne pense qu'il faut faire des chose qu'on ne veut pas faire
+            seulement parce qu'on veut le faire pourtant, ce n'est pas ce qu'il
+            faut que tu comprennes
+          </p>
+          <h6 class="date">il y a 3 min</h6>
+        </div>
+        <div class="message">
+          <h6 class="sender">gloves</h6>
+          <p>alors voici ce que je voulais te dire depuis la</p>
+          <h6 class="date">il y a 3 min</h6>
+        </div>
+        <div class="message receiving">
+          <p>alors voici ce que je voulais te dire depuis la</p>
+          <h6 class="date">12h55</h6>
+        </div>
+        <div class="message receiving">
+          <p>ok</p>
+          <h6 class="date">13h30</h6>
+        </div>
+      </div>
       <div id="group-zone">
-        <h3>salles actives</h3>
-        <div class="group-info">
-          <div>
-            <button>
-              <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
-            </button>
+        <div id="group-wrapper">
+          <div class="group-zone-title">
+            <h3>salles actives</h3>
           </div>
-          <h4>General</h4>
-          <button class="default-button">default</button>
+          <div class="group-info general">
+            <button>
+              <img src="imgs/baseline-lock-24px.svg" alt="default" />
+            </button>
+            <h4>General</h4>
+            <button class="default-button">default</button>
+          </div>
+          <div class="group-info active-group">
+            <button>
+              <img
+                src="imgs/baseline-remove_circle-orange-24px.svg"
+                alt="settings"
+              />
+            </button>
+            <h4>Equipe 1</h4>
+          </div>
         </div>
-        <div class="group-info">
-          <div>
+        <div id="group-wrapper">
+          <h3>joindre un groupe</h3>
+          <div class="group-info" active>
             <button>
-              <img src="imgs/baseline-grade-red-24px.gif" alt="settings" />
+              <img
+                src="imgs/baseline-add_circle-green-24px.svg"
+                alt="settings"
+              />
             </button>
+            <h4>Equipe 2</h4>
           </div>
-          <h4>Equipe 1</h4>
-        </div>
-        <h3>salles disponibles</h3>
-        <div class="group-info" active>
-          <div>
+          <div class="group-info" active>
             <button>
-              <img src="imgs/baseline-add-24px.svg" alt="settings" />
+              <img
+                src="imgs/baseline-add_circle-green-24px.svg"
+                alt="settings"
+              />
             </button>
+            <h4>Equipe 3</h4>
           </div>
-          <h4>Equipe 2</h4>
         </div>
       </div>
       <div id="text-zone">
