--- a/TD3/index.html
+++ b/TD3/index.html
@@ -81,47 +81,13 @@
         </div>
       </div>
       <div id="group-zone">
-        <div id="group-wrapper">
+        <div id="activeChannels" class="group-wrapper">
           <div class="group-zone-title">
             <h3>salles actives</h3>
           </div>
-          <div class="group-info general">
-            <button>
-              <img src="imgs/baseline-lock-24px.svg" alt="default" />
-            </button>
-            <h4>General</h4>
-            <button class="default-button">default</button>
-          </div>
-          <div class="group-info active-group">
-            <button>
-              <img
-                src="imgs/baseline-remove_circle-orange-24px.svg"
-                alt="settings"
-              />
-            </button>
-            <h4>Equipe 1</h4>
-          </div>
         </div>
-        <div id="group-wrapper">
+        <div id="nonActiveChannels" class="group-wrapper">
           <h3>joindre un groupe</h3>
-          <div class="group-info" active>
-            <button>
-              <img
-                src="imgs/baseline-add_circle-green-24px.svg"
-                alt="settings"
-              />
-            </button>
-            <h4>Equipe 2</h4>
-          </div>
-          <div class="group-info" active>
-            <button>
-              <img
-                src="imgs/baseline-add_circle-green-24px.svg"
-                alt="settings"
-              />
-            </button>
-            <h4>Equipe 3</h4>
-          </div>
         </div>
       </div>
       <div id="text-zone">
