ca fonctionne plus

--- a/TD3/index.html
+++ b/TD3/index.html
@@ -21,11 +21,11 @@
         <button class="btn">
           <img src="imgs/baseline-perm_identity-24px.svg" alt="settings" />
         </button>
-        <button class="btn">
+        <button class="btn" id="notifications">
           <img
             src="imgs/baseline-notifications_active-24px.svg"
             alt="settings"
-          />
+          /><span></span>
         </button>
         <button class="btn">
           <img src="imgs/baseline-language-24px.svg" alt="settings" />
