--- a/TD3/index.html
+++ b/TD3/index.html
@@ -36,6 +36,8 @@
       <div id="chat-title">
         <h4>Groupe actif:</h4>
         <h3>Equipe 1</h3>
+        <h4>username:</h4>
+        <h3>fabrice</h3>
       </div>
       <div id="group-title">
         <h4>Liste des groupes</h4>
