almost done for real this time

--- a/TD3/index.html
+++ b/TD3/index.html
@@ -34,10 +34,18 @@
     </header>
     <section>
       <div id="chat-title">
-        <h4>Groupe actif:</h4>
-        <h3>Equipe 1</h3>
-        <h4>username:</h4>
-        <h3>fabrice</h3>
+        <div>
+          <h4>Groupe actif:</h4>
+          <h3 id="channelName">Equipe 1</h3>
+        </div>
+        <div>
+          <h4>username:</h4>
+          <h3 id="usernameHeader"></h3>
+        </div>
+        <div>
+          <h4>Participants:</h4>
+          <h3 id="numberOfUsers"></h3>
+        </div>
       </div>
       <div id="group-title">
         <h4>Liste des groupes</h4>
